--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>AIM -  Class</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/logoDefinitivo_1.webp" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -378,7 +378,7 @@
                                             <li style="text-align: justify;">Una etiqueta HTML es un elemento fundamental del lenguaje de marcado. Está compuesta por caracteres especiales rodeados por corchetes angulares &lt; &gt;</li>
                                             <li style="text-align: justify;">Ejemplo: &lt;p &gt;,&lt;h1 &gt;,&lt; div&gt;, &lt;a &gt;</li>
 
-
+                                            <br/>
                                             <ol start="2">
                                                 <li> <p style="text-align: left;"><b style="text-align: left;">Atributos:</b></p> </li>
                                             </ol>
@@ -386,7 +386,7 @@
                                             <li style="text-align: justify;">Los atributos proporcionan información adicional sobre la etiqueta y se incluyen dentro de su apertura.</li>
                                             <li style="text-align: justify;">Están compuestos por un nombre y un valor, separados por un signo igual '(=)' y encerrados entre comillas.</li>
                                             <li style="text-align: justify;">Ejemplo: &lt;a href="https://www.ejemplo.com"&gtEnlace &lt;/a &gt;. En este caso, href es el atributo y https://www.ejemplo.com es el valor.</li>
-
+                                            <br/>
                                             <ol start="3">
                                                 <li> <p style="text-align: left;"><b style="text-align: left;">Valor:</b></p> </li>
                                             </ol>
@@ -394,7 +394,7 @@
                                             <li style="text-align: justify;">En el contexto de HTML, el "valor" se refiere al contenido o la información que se encuentra entre la etiqueta de apertura y cierre.</li>
                                             <li style="text-align: justify;">Ejemplo: &lt;p &gt;Este es un párrafo.&lt;/p &gt;. Aquí, "Este es un párrafo." es el valor del elemento &lt;p &gt; .</li>
 
-
+                                                <br/>
                                                 <ol start="4">
                                                     <li> <p style="text-align: left;"><b style="text-align: left;">Contenido:</b></p> </li>
                                                 </ol>
@@ -422,7 +422,7 @@
                                                     <li style="text-align: justify;">Otros elementos específicos según las necesidades del documento.</li>
 
                                                 </ul>
-
+                                                <br/>
                                                 <ol start="2">
                                                     <li><p style="text-align: left;"><b style="text-align: left;">&lt;body&gt;:</b></p> </li>
                                                 </ol>
@@ -479,14 +479,14 @@
                                         <li style="text-align: justify;">El selector apunta a los elementos HTML a los que se aplicará el estilo.</li>
                                         <li style="text-align: justify;">Puede ser el nombre de un elemento HTML, una clase, un ID o incluso combinaciones más complejas.</li>
 
-
+                                        <br/>
                                         <ol start="2">
                                             <li> <p style="text-align: left;"><b style="text-align: left;">Propiedad:</b></p> </li>
                                         </ol>
                                         <li style="text-align: justify;">La propiedad es el aspecto específico del estilo que deseas aplicar al elemento seleccionado.</li>
                                         <li style="text-align: justify;">Puede incluir propiedades como <b>color</b>,<b>font-sizeb</b>, <b>margin</b>, <b>padding</b>, entre otras.</li>
                                         
-
+                                        <br/>
                                         <ol start="3">
                                             <li> <p style="text-align: left;"><b style="text-align: left;">Valor:</b></p> </li>
                                         </ol>
@@ -532,13 +532,13 @@
                                         <li style="text-align: justify;">En JavaScript, el nombre se refiere al identificador que asignas a una función, variable u objeto.</li>
                                         <li style="text-align: justify;">Debe seguir ciertas reglas, como comenzar con una letra, un guion bajo (_) o un símbolo de dólar ($).</li>
                                         <li style="text-align: justify;">Puedes usar letras, números, guiones bajos y símbolos de dólar en los nombres.</li>
-
+                                        <br/>
                                         <ol start="2">
                                             <li> <p style="text-align: left;"><b style="text-align: left;">Parámetro:</b></p> </li>
                                         </ol>
                                         <li style="text-align: justify;">Los parámetros son valores que se pasan a una función para que pueda realizar su tarea.</li>
                                         <li style="text-align: justify;">Se definen entre los paréntesis de la función y se utilizan como variables locales dentro de la función.</li>
-
+                                        <br/>
                                         <ol start="3">
                                             <li> <p style="text-align: left;"><b style="text-align: left;">Sentencia:</b></p> </li>
                                         </ol>
